the page is now working

--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 						<input type="text" class="form-control" id="hours" name="hours" placeholder="Hours (Format: 09:00am-05:30pm)" required>
 					</div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url" name="url" placeholder="Website (Format: www.mywebsite.com)" required>
+            <input type="text" class="form-control" id="url" name="url" placeholder="Website (Format: www.mywebsite.com)" required>
           </div>
           <div class="form-group">
             <input type="text" class="form-control" id="lat" name="lat" placeholder="Latitude (Format: 00.00000)" required>
@@ -142,8 +142,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-firestore.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slidereveal.min.js"></script>
