working with cites

--- a/clinics.html
+++ b/clinics.html
@@ -86,7 +86,13 @@
 						<input type="text" class="form-control" id="phone" name="phone" placeholder="Phone (Format: 12345678910)" required>
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" id="hours" name="hours" placeholder="Hours (Format: 09:00am-05:30pm)" required>
+						<input type="text" class="form-control" id="hoursNormal" name="hours" placeholder="Normal Hours (Format: 09:00am-05:30pm)" required>
+					</div>
+          <div class="form-group">
+						<input type="text" class="form-control" id="hoursSat" name="hours" placeholder="Saturday Hours (Input None If Not Applicable)" required>
+					</div>
+          <div class="form-group">
+						<input type="text" class="form-control" id="hoursSun" name="hours" placeholder="Sunday Hours (Input None If Not Applicable)" required>
 					</div>
           <div class="form-group">
             <input type="text" class="form-control" id="url" name="url" placeholder="Website (Format: www.mywebsite.com)" required>
@@ -97,6 +103,7 @@
           <div class="form-group">
             <input type="text" class="form-control" id="longitude" name="longitude" placeholder="Longitude (Format: -00.00000)" required>
           </div>
+
           <!-- <div id="services">
                 <h5>Blood Pressure</h5>
             <div class="form-group">
