changed width and cleaned up page

--- a/clinics.html
+++ b/clinics.html
@@ -36,10 +36,7 @@
 
         <ul id="listOfLinks">
           <li>
-            <a href="education.html" id="educationTop">Download</a>
-          </li>
-          <li>
-            <a href="contact.html" id="contactTop">Add Clinic</a>
+            <!-- <a href="contact.html" id="contactTop">Add Clinic</a> -->
           </li>
         </ul>
       </div>
@@ -56,15 +53,14 @@
     <div class="navbar fixed-top" id="header">
         <a href="index.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
-        <a href="education.html" id="educationTop">Download</a>
-        <a href="contact.html" id="contactTop">Add Clinic</a>
+        <!-- <a href="contact.html" id="contactTop">Add Clinic</a> -->
       </div>
     </div>
     <!-- End of the header -->
 
 <div class="container-fluid" id="wrapper">
   <div class="form-area">
-        <form role="form" id= "clinicForm">
+        <form role="form" id= "clinicForm" autocomplete="off">
         <br style="clear:both">
                     <h3 style="margin-bottom: 25px; text-align: center;">Clinic Form</h3>
     				<div class="form-group">
@@ -135,7 +131,7 @@
 
 
                     <div class="form-group">
-                    <textarea class="form-control" type="textarea" id="services" placeholder="Services (Format: Seperate By Commas)" maxlength="140" rows="3"></textarea>
+                    <textarea class="form-control" type="textarea" id="services" placeholder="Services (Format: Seperate By Commas)" maxlength="140" rows="2"></textarea>
                         <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>
                     </div>
 
