--- a/clinics.html
+++ b/clinics.html
@@ -32,7 +32,7 @@
       </span>
 
       <div class="links-sidebar">
-        <a href="index.html" id="matt2LogoHomeSiderbar"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
+        <a href="clinics.html" id="matt2LogoHomeSiderbar"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
 
         <ul id="listOfLinks">
           <li>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="navbar fixed-top" id="header">
-        <a href="index.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
+        <a href="clinics.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
         <!-- <a href="contact.html" id="contactTop">Add Clinic</a> -->
       </div>
@@ -137,7 +137,7 @@
 
         <button type="submit" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
         </form>
-
+        <br>
     </div>
 </div> <!-- End of Container-Fluid -->
 
