updated index.html and clinics

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="education.html" id="educationTop">Download</a>
           </li>
           <li>
-            <a href="contact.html" id="contactTop">Add Clinic</a>
+            <a href="clinics.html" id="contactTop">Add Clinic</a>
           </li>
         </ul>
       </div>
@@ -55,7 +55,7 @@
         <a href="index.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
         <a href="education.html" id="educationTop">Download</a>
-        <a href="contact.html" id="contactTop">Add Clinic</a>
+        <a href="clinics.html" id="contactTop">Add Clinic</a>
       </div>
     </div>
     <!-- End of the header -->
