--- a/clinics.html
+++ b/clinics.html
@@ -61,7 +61,7 @@
 <div class="container-fluid" id="wrapper">
   <div class="form-area">
         <form role="form" id= "clinicForm" autocomplete="off">
-        <br style="clear:both">
+        <!-- <br style="clear:both"> -->
                     <h3 style="margin-bottom: 25px; text-align: center;">Clinic Form</h3>
     				<div class="form-group">
 						<input type="text" class="form-control" id="clinicName" name="clinicName" placeholder="Clinic Name" required>
