--- a/clinics.html
+++ b/clinics.html
@@ -100,43 +100,15 @@
             <input type="text" class="form-control" id="longitude" name="longitude" placeholder="Longitude (Format: -00.00000)" required>
           </div>
 
-          <!-- <div id="services">
-                <h5>Blood Pressure</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="bp" name="b"  style="width="1""required>
-            </div>
-                <h5>Blood Sugar</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="bs" name="long"  required>
-            </div>
-                <h5>Cholesterol</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="chol" name="long"  required>
-            </div>
-                <h5>Flu Shot</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="flu" name="long"  required>
-            </div>
-                <h5>Pneumonia</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="pneu" name="long"  required>
-            </div>
-                <h5>Shingles</h5>
-            <div class="form-group">
-              <input type="checkbox" class="form-control" id="shing" name="long"  required>
-            </div>
-          </div> -->
-
-
-
-
                     <div class="form-group">
                     <textarea class="form-control" type="textarea" id="services" placeholder="Services (Format: Seperate By Commas)" maxlength="140" rows="2"></textarea>
                         <span class="help-block"><p id="characterLeft" class="help-block ">You have reached the limit</p></span>
                     </div>
 
         <button type="submit" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
+        <button type="reset" id="reset" name="reset" class="btn btn-primary pull-right">Reset Form</button>
         </form>
+
         <br>
     </div>
 </div> <!-- End of Container-Fluid -->
