working on features page

--- a/features.html
+++ b/features.html
@@ -10,6 +10,7 @@
       <link rel="icon" href="assets/images/appicon.png" type="image/">
       <!-- Custom CSS -->
       <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+      <link rel="stylesheet" type="text/css" href="assets/css/features.css"/>
       <link rel="stylesheet" type="text/css" href="assets/css/header.css"/>
       <link rel="stylesheet" type="text/css" href="assets/css/sidebar.css" />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
@@ -66,22 +67,38 @@
 
 <div class="container-fluid" id="wrapper">
 
-  <div class="row">
-    <div class="col">
+
       <h2 id="title">Health Companion</h2><br><br>
-      <!-- <img class="mySlides w3-animate-top"    src="img_01.jpg"> -->
-      <img class="mySlides w3-animate-bottom" src="assets/images/phone.png" width="200px" height="400px" id="appIcon">
-      <img class="mySlides w3-animate-top" src="assets/images/bpPhone.png" width="200px" height="400px" id="appIcon"><br><br><br>
-      <!-- <img class="mySlides w3-animate-top"    src="img_03.jpg"> -->
-      <!-- <img class="mySlides w3-animate-bottom" src="img_04.jpg"> -->
-      <!-- <img src="assets/images/phone.png" width="200px" height="400px" id="appIcon"><br><br><br> -->
-      <!-- <img src="assets/images/appicon.png" width="200px" height="250px" id="appIcon"><br> -->
-      <p id="downloadText">
-        Click Below To Download The App! <br>
-      </p>
-      <img src="assets/images/download-google-play-store-logo.png" width="200px" height="75px" id="googlePlayBadge">
-    </div>
-  </div>
+        <!--GOES HERE-->
+
+        <section id="services">
+            <h1>Services</h1>
+        </section>
+        <section id="journal">
+            <h1>Journal</h1>
+        </section>
+        <section id="blood-pressure">
+            <h1>Blood Pressure</h1>
+        </section>
+        <section id="blood-sugar">
+            <h1>Blood Sugar</h1>
+        </section>
+        <section id="cholesterol">
+            <h1>Cholesterol</h1>
+        </section>
+        <section id="vaccinations">
+            <h1>Vaccinations</h1>
+        </section>
+        <section id="weight">
+            <h1>Body Weight</h1>
+        </section>
+        <section id="allergies">
+            <h1>Allergies</h1>
+        </section>
+        <section id="medications">
+            <h1>Medications</h1>
+        </section>
+        
 </div> <!-- End of Container-Fluid -->
 
 
@@ -92,7 +109,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slidereveal.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/slideshow.js"></script>
+    <!-- <script src="assets/js/slideshow.js"></script> -->
 
     </body>
   </html>
