--- a/clinics.html
+++ b/clinics.html
@@ -152,6 +152,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slidereveal.min.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/contact.js"></script>
+    <script src="assets/js/addClinics.js"></script>
     </body>
   </html>
