--- a/clinics.html
+++ b/clinics.html
@@ -58,7 +58,7 @@
     </div>
     <!-- End of the header -->
 
-<div class="container-fluid" id="wrapper">
+<div class="container-fluid" id="wrapperClinic">
   <div class="form-area">
         <form role="form" id= "clinicForm" autocomplete="off">
         <!-- <br style="clear:both"> -->
@@ -106,7 +106,6 @@
                     </div>
 
         <button type="submit" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
-        <button type="reset" id="reset" name="reset" class="btn btn-primary pull-right">Reset Form</button>
         </form>
 
         <br>
