working on blood pressure

--- a/features.html
+++ b/features.html
@@ -78,7 +78,9 @@
             <h1>Journal</h1>
         </section>
         <section id="blood-pressure">
-            <h1>Blood Pressure</h1>
+          <img src="assets/images/bpPhone.png" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <h1 id="blood-pressure-title">Blood Pressure</h1>
+
         </section>
         <section id="blood-sugar">
             <h1>Blood Sugar</h1>
