fixed right side issure

--- a/features.html
+++ b/features.html
@@ -68,7 +68,7 @@
 <div class="container-fluid" id="wrapper">
 
 
-      <h2 id="title">Health Companion</h2><br><br>
+      <!-- <h2 id="title">Health Companion</h2> -->
         <!--GOES HERE-->
 
         <section id="services">
@@ -80,6 +80,12 @@
         <section id="blood-pressure">
           <img src="assets/images/bpPhone.png" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
           <h1 id="blood-pressure-title">Blood Pressure</h1>
+
+          <ul class="myList">
+            <li >One</li>
+            <li>Two</li>
+            <li>Three</li>
+          </ul>
 
         </section>
         <section id="blood-sugar">
