made titles go to lower left

--- a/features.html
+++ b/features.html
@@ -72,13 +72,14 @@
         <!--GOES HERE-->
 
         <section id="services">
-            <h1>Services</h1>
+            <h1 id="services-title">Services</h1>
+            <!-- <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px"> -->
         </section>
         <section id="journal">
-            <h1>Journal</h1>
+            <h1 id="journal-title">Journal</h1>
         </section>
         <section id="blood-pressure">
-          <img src="assets/images/bpPhone.png" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <!-- <img src="assets/images/bpPhone.png" id="blood-pressure-phone" width="200px" height="400px" id="appIcon"> -->
           <h1 id="blood-pressure-title">Blood Pressure</h1>
 
           <ul class="myList">
@@ -89,22 +90,22 @@
 
         </section>
         <section id="blood-sugar">
-            <h1>Blood Sugar</h1>
+            <h1 id ="blood-sugar-title">Blood Sugar</h1>
         </section>
         <section id="cholesterol">
-            <h1>Cholesterol</h1>
+            <h1 id ="cholesterol-title">Cholesterol</h1>
         </section>
         <section id="vaccinations">
-            <h1>Vaccinations</h1>
+            <h1 id="vaccinations-title">Vaccinations</h1>
         </section>
         <section id="weight">
-            <h1>Body Weight</h1>
+            <h1 id="body-weight-title">Body Weight</h1>
         </section>
         <section id="allergies">
-            <h1>Allergies</h1>
+            <h1 id="allergies-title">Allergies</h1>
         </section>
         <section id="medications">
-            <h1>Medications</h1>
+            <h1 id="medications-title">Medications</h1>
         </section>
 
 </div> <!-- End of Container-Fluid -->
