working on titles

--- a/features.html
+++ b/features.html
@@ -68,7 +68,7 @@
 <div class="container-fluid" id="wrapper">
 
 
-      <!-- <h2 id="title">Health Companion</h2> -->
+      <h2 id="title">Health Companion</h2>
         <!--GOES HERE-->
 
         <section id="services">
