redid mobile site for top right h1

--- a/features.html
+++ b/features.html
@@ -65,15 +65,17 @@
     </div>
     <!-- End of the header -->
 
+
 <div class="container-fluid" id="wrapper">
+    <img src="assets/images/schealthplusmelogoWhite.png" id="logoImage">
 
+      <!-- <h2 id="title">Health Companion</h2> -->
 
-      <h2 id="title">Health Companion</h2>
         <!--GOES HERE-->
 
         <section id="services">
             <h1 id="services-title">Services</h1>
-            <!-- <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px"> -->
+            <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px">
         </section>
         <section id="journal">
             <h1 id="journal-title">Journal</h1>
