--- a/features.html
+++ b/features.html
@@ -75,16 +75,21 @@
 
         <section id="services">
             <h1 id="services-title">Services</h1>
-            <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px">
+            <!-- <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px"> -->
+            <!-- <ul class="myList">
+              <li >One</li>
+              <li>Two</li>
+              <li>Three</li>
+            </ul> -->
         </section>
         <section id="journal">
             <h1 id="journal-title">Journal</h1>
         </section>
         <section id="blood-pressure">
-          <!-- <img src="assets/images/bpPhone.png" id="blood-pressure-phone" width="200px" height="400px" id="appIcon"> -->
+          <img src="assets/images/bloodPressureGraph.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
           <h1 id="blood-pressure-title">Blood Pressure</h1>
 
-          <ul class="myList">
+          <ul id="myListBP">
             <li >One</li>
             <li>Two</li>
             <li>Three</li>
@@ -120,6 +125,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slidereveal.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/jquery.waypoints.min.js"></script>
+    <script src="assets/js/features.js"></script>
     <!-- <script src="assets/js/slideshow.js"></script> -->
 
     </body>
