got slideshow for images and bulleted list

--- a/features.html
+++ b/features.html
@@ -86,13 +86,15 @@
             <h1 id="journal-title">Journal</h1>
         </section>
         <section id="blood-pressure">
-          <img src="assets/images/bloodPressureGraph.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <img class="mySlides" src="assets/images/bloodPressureGraph.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <img class="mySlides" src="assets/images/bloodPressureEntry.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
           <h1 id="blood-pressure-title">Blood Pressure</h1>
+          <button id= "bpButton">Click</button>
 
-          <ul id="myListBP">
-            <li >One</li>
-            <li>Two</li>
-            <li>Three</li>
+          <ul id="bp-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
           </ul>
 
         </section>
