--- a/features.html
+++ b/features.html
@@ -75,19 +75,29 @@
 
         <section id="services">
             <h1 id="services-title">Services</h1>
-            <!-- <img src="assets/images/services.gif" id="services-phone" width="200px" height="400px"> -->
-            <!-- <ul class="myList">
-              <li >One</li>
-              <li>Two</li>
-              <li>Three</li>
-            </ul> -->
+            <img class="mySlidesServices" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+            <ul id="services-list">
+              <li>• Log Blood Pressure Entries</li>
+              <li>• Populated With Data To Show Trends Over Time</li>
+              <li>• Cards allow simplified viewing for individual entries</li>
+            </ul>
+
         </section>
         <section id="journal">
             <h1 id="journal-title">Journal</h1>
+            <img class="mySlidesJournal" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+            <ul id="journal-list">
+              <li>• Log Blood Pressure Entries</li>
+              <li>• Populated With Data To Show Trends Over Time</li>
+              <li>• Cards allow simplified viewing for individual entries</li>
+            </ul>
+
         </section>
         <section id="blood-pressure">
-          <img class="mySlides" src="assets/images/bloodPressureGraph.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
-          <img class="mySlides" src="assets/images/bloodPressureEntry.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <img class="mySlidesBP" src="assets/images/bloodPressureGraph.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
+          <img class="mySlidesBP" src="assets/images/bloodPressureEntry.gif" id="blood-pressure-phone" width="200px" height="400px" id="appIcon">
           <h1 id="blood-pressure-title">Blood Pressure</h1>
           <button id= "bpButton">Click</button>
 
@@ -99,22 +109,70 @@
 
         </section>
         <section id="blood-sugar">
-            <h1 id ="blood-sugar-title">Blood Sugar</h1>
+          <h1 id ="blood-sugar-title">Blood Sugar</h1>
+          <img class="mySlidesBS" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="bs-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
         <section id="cholesterol">
-            <h1 id ="cholesterol-title">Cholesterol</h1>
+          <h1 id ="cholesterol-title">Cholesterol</h1>
+          <img class="mySlidesCholesterol" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="cholesterol-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
         <section id="vaccinations">
-            <h1 id="vaccinations-title">Vaccinations</h1>
+          <h1 id="vaccinations-title">Vaccinations</h1>
+          <img class="mySlidesVaccinations" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="vaccinations-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
         <section id="weight">
-            <h1 id="body-weight-title">Body Weight</h1>
+          <h1 id="body-weight-title">Body Weight</h1>
+          <img class="mySlidesWeight" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="weight-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
         <section id="allergies">
-            <h1 id="allergies-title">Allergies</h1>
+          <h1 id="allergies-title">Allergies</h1>
+          <img class="mySlidesAllergies" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="allergies-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
         <section id="medications">
-            <h1 id="medications-title">Medications</h1>
+          <h1 id="medications-title">Medications</h1>
+          <img class="mySlidesMedications" src="assets/images/journalswipe.gif" width="200px" height="400px" id="appIcon">
+
+          <ul id="medications-list">
+            <li>• Log Blood Pressure Entries</li>
+            <li>• Populated With Data To Show Trends Over Time</li>
+            <li>• Cards allow simplified viewing for individual entries</li>
+          </ul>
+
         </section>
 
 </div> <!-- End of Container-Fluid -->
