--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="description" content="Health Companion: FMU">
-      <meta name="author" content="Health Companion">
+      <meta name="description" content="SCHealthPlusMe: FMU">
+      <meta name="author" content="SCHealthPlusMe">
 
-      <title>Health Companion</title>
+      <title>SCHealthPlusMe</title>
       <link rel="icon" href="assets/images/appicon.png" type="image/">
       <!-- Custom CSS -->
       <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
@@ -68,7 +68,7 @@
 
   <div class="row">
     <div class="col">
-      <h2 id="title">Health Companion</h2><br><br>
+      <h2 id="title">SCHealthPlusMe</h2><br><br>
       <!-- <img class="mySlides w3-animate-top"    src="img_01.jpg"> -->
       <img class="mySlides w3-animate-bottom" src="assets/images/phone.png" width="200px" height="400px" id="appIcon">
       <img class="mySlides w3-animate-top" src="assets/images/bpPhone.png" width="200px" height="400px" id="appIcon"><br><br><br>
