--- a/clinics.html
+++ b/clinics.html
@@ -13,11 +13,16 @@
       <link rel="stylesheet" type="text/css" href="assets/css/header.css"/>
       <link rel="stylesheet" type="text/css" href="assets/css/sidebar.css" />
       <link rel="stylesheet" type="text/css" href="assets/css/contact.css" />
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <!-- link for bootstrap -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
+
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
       <!-- Link for font -->
       <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400" rel="stylesheet">
 
@@ -53,7 +58,8 @@
     <div class="navbar fixed-top" id="header">
         <a href="clinics.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
-        <!-- <a href="contact.html" id="contactTop">Add Clinic</a> -->
+        <!-- <a href="contact.html" id="contactTop">Remove Clinic</a> -->
+        <button id="removeClinic">Remove Clinic</button>
       </div>
     </div>
     <!-- End of the header -->
@@ -107,6 +113,11 @@
 
         <button type="submit" id="submit" name="submit" class="btn btn-primary pull-right">Submit Form</button>
         </form>
+
+    <!-- <div class="form-group">
+      <input id="cIDinput" type="text" class="form-control" name="clientIDBox" placeholder="ID" value="">
+    </div> -->
+
 
         <br>
     </div>
