added to mobile sidebar

--- a/clinics.html
+++ b/clinics.html
@@ -41,7 +41,7 @@
 
         <ul id="listOfLinks">
           <li>
-            <!-- <a href="contact.html" id="contactTop">Add Clinic</a> -->
+            <button id="removeClinic">Remove Clinic</button>
           </li>
         </ul>
       </div>
