fixed button issue

--- a/clinics.html
+++ b/clinics.html
@@ -41,7 +41,7 @@
 
         <ul id="listOfLinks">
           <li>
-            <button id="removeClinic">Remove Clinic</button>
+            <button id="removeClinicSidebar">Remove Clinic</button>
           </li>
         </ul>
       </div>
@@ -59,7 +59,7 @@
         <a href="clinics.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
         <!-- <a href="contact.html" id="contactTop">Remove Clinic</a> -->
-        <button id="removeClinic">Remove Clinic</button>
+        <button id="removeClinicMain">Remove Clinic</button>
       </div>
     </div>
     <!-- End of the header -->
