--- a/masterlist.html
+++ b/masterlist.html
@@ -36,6 +36,7 @@
         <ul id="listOfLinks">
           <li>
             <a href="clinics.html" id="contactTop">Add Clinic</a>
+            <!-- <button id="removeClinicSidebar">Remove Clinic</button> -->
           </li>
         </ul>
       </div>
@@ -52,7 +53,9 @@
     <div class="navbar fixed-top" id="header">
         <a href="clinics.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
+        <!-- <button id="removeClinicSidebar">Remove Clinic</button> -->
         <a href="clinics.html" id="contactTop">Add Clinic</a>
+
       </div>
     </div>
     <!-- End of the header -->
@@ -77,6 +80,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="assets/js/jquery.slidereveal.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <!-- <script src="assets/js/addClinics.js"></script> -->
     <script src="assets/js/masterClinicManager.js"></script>
 
     </body>
