working on full manager with expandable

--- a/masterlist.html
+++ b/masterlist.html
@@ -64,8 +64,10 @@
 
   <div class="row">
     <div class="col">
-      <ul id="clinic-list">
+      <ul id="clinic-button">
+        <!-- <ul id="clinic-list">
 
+        </ul> -->
       </ul>
   </div>
 </div> <!-- End of Container-Fluid -->
