wrapping up manager

--- a/clinics.html
+++ b/clinics.html
@@ -43,6 +43,9 @@
           <li>
             <button id="removeClinicSidebar">Remove Clinic</button>
           </li>
+          <li>
+            <a href="masterlist.html" id="master-list">Clinic Manager</a>
+          </li>
         </ul>
       </div>
 
@@ -59,6 +62,7 @@
         <a href="clinics.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
         <!-- <a href="contact.html" id="contactTop">Remove Clinic</a> -->
+        <a href="masterlist.html" id="master-list">Clinic Manager</a>
         <button id="removeClinicMain">Remove Clinic</button>
       </div>
     </div>
