--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <li>
             <a href="clinics.html" id="contactTop">Add Clinic</a>
           </li>
+          <li>
+            <a href="masterlist.html" id="master-list">Clinic Manager</a>
+          </li>
         </ul>
       </div>
 
