--- a/masterlist.html
+++ b/masterlist.html
@@ -6,7 +6,7 @@
       <meta name="description" content="Site Home of Matt Harrington. Photographer. Web Design. Android Development. Photographer. Bass Player.">
       <meta name="author" content="Matt Harrington">
 
-      <title>SCHealthPlusMe</title>
+      <title>Clinic Manager</title>
       <link rel="icon" href="assets/images/appicon.png" type="image/">
       <!-- Custom CSS -->
       <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
@@ -31,12 +31,14 @@
       </span>
 
       <div class="links-sidebar">
-        <a href="clinics.html" id="matt2LogoHomeSiderbar"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
+        <a href="masterlist.html" id="matt2LogoHomeSiderbar"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
 
         <ul id="listOfLinks">
           <li>
+          <button id="removeClinicSidebar">Remove Clinic</button>
+          </li>
+          <li>
             <a href="clinics.html" id="contactTop">Add Clinic</a>
-            <!-- <button id="removeClinicSidebar">Remove Clinic</button> -->
           </li>
         </ul>
       </div>
@@ -55,6 +57,8 @@
       <div id="topLabels">
         <!-- <button id="removeClinicSidebar">Remove Clinic</button> -->
         <a href="clinics.html" id="contactTop">Add Clinic</a>
+
+        <button id="removeClinicMain">Remove Clinic</button>
 
       </div>
     </div>
