--- a/education.html
+++ b/education.html
@@ -39,6 +39,9 @@
           <li>
             <a href="contact.html" id="contactTop">Add Clinic</a>
           </li>
+          <li>
+            <a href="clinics.html" id="contactTop">Add Clinic</a>
+          </li>
         </ul>
       </div>
 
