--- a/features.html
+++ b/features.html
@@ -101,6 +101,10 @@
           <h1 id="blood-pressure-title">Blood Pressure</h1>
           <button id= "bpButton">Click</button>
 
+          <!-- <video autoplay muted loop id="myVideo">
+              <source src="assets/images/Clinic Manager Video.mov" type="video/mp4">
+        </video> -->
+
           <ul id="bp-list">
             <li>• Log Blood Pressure Entries</li>
             <li>• Populated With Data To Show Trends Over Time</li>
