--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
           <a href="features.html" id="featuresTop">Features</a>
           </li>
           <li>
-            <a href="education.html" id="educationTop">Download</a>
-          </li>
-          <li>
-            <a href="clinics.html" id="contactTop">Add Clinic</a>
-          </li>
-          <li>
-            <a href="masterlist.html" id="master-list">Clinic Manager</a>
+            <a href="https://play.google.com/store/apps/details?id=com.fmu.pmarl.peedeehealthadvisor" id="educationTop">Download</a>
           </li>
         </ul>
       </div>
@@ -61,8 +55,7 @@
         <a href="index.html" id="matt2LogoHome"><img src="assets/images/appicon.png" alt="mattLogo" height="30" width="30"/></a>
       <div id="topLabels">
         <a href="features.html" id="featuresTop">Features</a>
-        <a href="education.html" id="educationTop">Download</a>
-        <a href="clinics.html" id="contactTop">Add Clinic</a>
+        <a href="https://play.google.com/store/apps/details?id=com.fmu.pmarl.peedeehealthadvisor" id="educationTop">Download</a>
       </div>
     </div>
     <!-- End of the header -->
@@ -82,7 +75,7 @@
       <p id="downloadText">
         Click Below To Download The App! <br>
       </p>
-      <img src="assets/images/download-google-play-store-logo.png" width="200px" height="75px" id="googlePlayBadge">
+      <a href="https://play.google.com/store/apps/details?id=com.fmu.pmarl.peedeehealthadvisor"><img src="assets/images/download-google-play-store-logo.png" width="200px" height="75px" id="googlePlayBadge"></a>
     </div>
   </div>
 </div> <!-- End of Container-Fluid -->
